[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Trevor Smith <trevorsm7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "intcode"
path = "src/intcode.rs"

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"

[dependencies]
quick-error = "2.0.0"
itertools = "0.9.0"
