[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Trevor Smith <trevorsm7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "intcode"
path = "src/intcode.rs"

[dependencies]
quick-error = "2.0.0"
itertools = "0.9.0"
rayon = "1.4.1"
ordered-float = "2.0.0"
